build: update to sbt-jmh 0.4.0