@@ -7,8 +7,22 @@ import scala.concurrent.duration._
 @State(Scope.Thread)
 @BenchmarkMode(Array(Mode.Throughput))
 @Warmup(iterations = 5, time = 1)
-@Measurement(iterations = 10, time = 5)
+@Measurement(iterations = 10, time = 1)
 @Threads(1)
-@Fork(2)
 @OutputTimeUnit(SECONDS)
+@Fork(
+  value = 2,
+  jvmArgs = Array(
+    "-server",
+    "-Xms2g",
+    "-Xmx2g",
+    "-XX:NewSize=1g",
+    "-XX:MaxNewSize=1g",
+    "-XX:InitialCodeCacheSize=512m",
+    "-XX:ReservedCodeCacheSize=512m",
+    "-XX:+UseG1GC",
+    "-XX:-UseBiasedLocking",
+    "-XX:+AlwaysPreTouch"
+  )
+)
 abstract class Base
